# RubikSimulator

./: CMakeLists.txt  README.md  main.cpp
include/: Permutation.hpp  RubikSolver.hpp  RubikState.hpp  RubikTUI.hpp
src/: RubikTUI.cpp
tests/: CMakeLists.txt  TestRubikState.cpp
